@@ -6,7 +6,12 @@ sourceCompatibility = targetCompatibility = appJavaCompatibility
 tasks.withType(JavaCompile) {
     options.compilerArgs.addAll([
             '--add-exports',
-            'java.base/sun.net.www.protocol.file=ALL-UNNAMED'
+            'java.base/sun.net.www.protocol.file=ALL-UNNAMED',
+'--add-exports',
+            'jdk.internal.le/jdk.internal.org.jline.utils=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED'
+
     ])
 }
 
